[package]
name = "rust-team"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Pietro Albini <pietro@pietroalbini.org>"]
edition = '2018'

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.13.0"
dialoguer = "0.10.1"
env_logger = { version = "0.9.0", default-features = false }
indexmap = "2"
log = "0.4"
rayon = "1.5"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rust_team_data = { path = "rust_team_data", features = ["email-encryption"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
structopt = "0.3.26"
toml = "0.8"

[dev-dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
difference = "2.0.0"
duct = "0.13.4"
walkdir = "2.3.1"

[workspace]
members = [
    "rust_team_data"
]
