[package]
name = "rust-team"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12.0"
env_logger = { version = "0.11.0", default-features = false }
hyper-old-types = "0.11"
indexmap.workspace = true
log = "0.4"
regex = "1.5.5"
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls", "charset", "http2", "form", "query"], default-features = false }
rust_team_data = { path = "rust_team_data", features = ["email-encryption"] }
secrecy = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde-untagged = "0.1"
tempfile = "3.19.1"
thiserror = "2.0.18"
toml = "1.0"

[dev-dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
derive_builder = "0.20.2"
difference = "2.0.0"
dir-diff = "0.3"
duct = "1.0.0"
insta = "1.40.0"
walkdir = "2.3.1"

[workspace]
members = [
    "rust_team_data",
]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
chacha20poly1305 = "0.10.1"
getrandom = "0.4.2"
hex = "0.4.2"
indexmap = "2.6.0"
serde = "1.0.85"
