[package]
name = "rust_team_data"
version = "1.0.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"

[dependencies]
chacha20poly1305 = { version = "0.9.0", optional = true }
getrandom = { version = "0.2.1", optional = true }
hex = { version = "0.4.2", optional = true }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0.85", features = ["derive"] }

[features]
email-encryption = ["chacha20poly1305", "getrandom", "hex"]
