[package]
name = "rust_team_data"
version = "1.0.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"
license.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[features]
email-encryption = ["chacha20poly1305", "getrandom", "hex"]
