[package]
name = "rust_team_data"
version = "1.0.0"
edition = "2018"
license.workspace = true

[dependencies]
chacha20poly1305 = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true, features = ["getrandom", "static_secrets"] }
blake3 = {workspace = true, optional = true}
getrandom = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[features]
email-encryption = ["chacha20poly1305", "x25519-dalek", "blake3", "getrandom", "hex"]
