[package]
name = "sync-team"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4"
env_logger = "0.9"
rust_team_data = { git = "https://github.com/rust-lang/team", features = ["email-encryption"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
base64 = "0.13"
hyper-old-types = "0.11"
tempfile = "3.3"
serde_json = "1.0"

[dev-dependencies]
indexmap = "2.1.0"
