[package]
name = "sync-team"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls", "charset", "http2", "macos-system-configuration"], default-features = false }
log.workspace = true
rust_team_data = { workspace = true, features = ["email-encryption"] }
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
base64.workspace = true
hyper-old-types.workspace = true
serde_json.workspace = true
secrecy.workspace = true

[dev-dependencies]
indexmap.workspace = true
derive_builder.workspace = true
insta.workspace = true
